Improve the resolution of the menu item homescreen launch source metric.

This CL deprecates the SOURCE_ADD_TO_HOMESCREEN source for homescreen
launch intents on Android. Three new buckets are added in its place:
SOURCE_ADD_TO_HOMESCREEN_PWA, SOURCE_ADD_TO_HOMESCREEN_STANDALONE, and
SOURCE_ADD_TO_HOMESCREEN_SHORTCUT.

Existing shortcuts are mapped to either the STANDALONE or SHORTCUT
sources, as it is impossible to properly distinguish PWAs from non-PWAs
when added from the menu item prior to this CL. Following this CL, PWAs
added from the menu item are explicitly tagged with
SOURCE_ADD_TO_HOMESCREEN_PWA.

BUG=690266

Review-Url: https://codereview.chromium.org/2697473005
Cr-Commit-Position: refs/heads/master@{#450902}

Former-commit-id: de938a8e39930cca0d2a1f8c96f2cdc9b15192de