chrome/browser/android/webapps/add_to_homescreen_data_fetcher.cc
@@ -123,6 +123,8 @@ void AddToHomescreenDataFetcher::OnDidGetWebApplicationInfo(
   if (web_app_info.mobile_capable == WebApplicationInfo::MOBILE_CAPABLE ||
       web_app_info.mobile_capable == WebApplicationInfo::MOBILE_CAPABLE_APPLE) {
     shortcut_info_.display = blink::WebDisplayModeStandalone;
+    shortcut_info_.UpdateSource(
+        ShortcutInfo::SOURCE_ADD_TO_HOMESCREEN_STANDALONE);
   }
 
   // Record what type of shortcut was added by the user.
@@ -207,21 +209,16 @@ void AddToHomescreenDataFetcher::OnDidPerformInstallableCheck(
 
   is_installable_check_complete_ = true;
 
+  bool webapk_compatible = false;
   if (check_webapk_compatibility_) {
-    bool webapk_compatible =
-        (data.error_code == NO_ERROR_DETECTED &&
-         AreWebManifestUrlsWebApkCompatible(data.manifest));
+    webapk_compatible = (data.error_code == NO_ERROR_DETECTED &&
+                         AreWebManifestUrlsWebApkCompatible(data.manifest));
     weak_observer_->OnDidDetermineWebApkCompatibility(webapk_compatible);
 
     if (webapk_compatible) {
       // WebAPKs are wholly defined by the Web Manifest. Ignore the <meta> tag
       // data received in OnDidGetWebApplicationInfo().
       shortcut_info_ = ShortcutInfo(GURL());
-
-      if (data.badge_icon && !data.badge_icon->drawsNothing()) {
-        shortcut_info_.best_badge_icon_url = data.badge_icon_url;
-        badge_icon_ = *data.badge_icon;
-      }
     }
   }
 
@@ -230,6 +227,15 @@ void AddToHomescreenDataFetcher::OnDidPerformInstallableCheck(
         base::UserMetricsAction("webapps.AddShortcut.Manifest"));
     shortcut_info_.UpdateFromManifest(data.manifest);
     shortcut_info_.manifest_url = data.manifest_url;
+
+    if (webapk_compatible) {
+      shortcut_info_.UpdateSource(ShortcutInfo::SOURCE_ADD_TO_HOMESCREEN_PWA);
+
+      if (data.badge_icon && !data.badge_icon->drawsNothing()) {
+        shortcut_info_.best_badge_icon_url = data.badge_icon_url;
+        badge_icon_ = *data.badge_icon;
+      }
+    }
   }
 
   // Save the splash screen URL for the later download.
